# esp32-template

./: .agent.md  .agent.md.template  .instructions.md  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PHASE3_REPORT.md  PHASE4_SKILLS.md  PROJECT.md.template  README.md  README.md.template  SECURITY.md  idf_component.yml  new-project.ps1  plan.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  test-phase3.ps1
.copilot/skills/new-project/: SKILL.md
.github/: TEMPLATE_HELP.md  copilot-instructions.md
.github/agents/: edit-specialist.agent.md  lean-workspace.agent.md  terminal-specialist.agent.md
.github/agents/build-project/: SKILL.md  build-project.ps1
.github/agents/commit/: SKILL.md  commit.ps1
.github/agents/initial-upload/: SKILL.md  initial-upload.ps1
.github/agents/upload/: SKILL.md  upload.ps1
.github/agents/upload-firmware/: SKILL.md  upload-firmware.ps1
.github/hooks/: tool-gate.json
.github/hooks/scripts/: pre_tool_use.ps1
include/: config.h
skills/add-library/: SKILL.md  add-library.ps1
skills/add-ota/: SKILL.md  add-ota.ps1
skills/add-profiling/: SKILL.md  add-profiling.ps1
skills/add-security/: SKILL.md  add-security.ps1
skills/add-webui/: SKILL.md  add-webui.ps1
skills/setup-ci/: SKILL.md  setup-ci.ps1
src/: CMakeLists.txt  main.c
